--- a/src/sass/partials/_btn.sass
+++ b/src/sass/partials/_btn.sass
@@ -12,6 +12,12 @@
   +hover
     background-color: transparent
     color: $accent
+  +sm
+    padding: 14px 10px
+  +xs
+    padding: 10px
+    min-width: 0
+    width: 100%
   
   &--transp
     border-color: currentColor
