--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -14,6 +14,7 @@ title: home
   {% include "partials/sections/_s-delivery.html" %}
   {% include "partials/sections/_s-gallery.html" %}
   {% include "partials/sections/_s-contacts.html" %}
+  {% include "partials/_footer.html" %}
 {% endblock %}
 
 
