--- a/src/templates/partials/sections/_s-features-item.html
+++ b/src/templates/partials/sections/_s-features-item.html
@@ -1,6 +1,6 @@
 <!-- begin section -->
 <section class="section s-features-item bg-cover bg-center-center js-lazy"
-  data-background-image="img/bg-section/bg-kitchen.jpg">
+  data-background-image="./img/bg-section/bg-kitchen.jpg">
   <div class="container">
     <div class="section__title section__title-left">
       <h2 class="title">На нашей кухне всегда <em class="accent">чисто</em></h2>
