--- a/src/templates/partials/sections/_s-features.html
+++ b/src/templates/partials/sections/_s-features.html
@@ -57,12 +57,12 @@ features = {
  %}
 
 <!-- begin section -->
-<section class="section s-features overflow-hidden bg-top-right pb-md js-lazy" data-background-image="img/bg-section/bg-feature.png">
+<section class="section s-features overflow-hidden bg-top-right pb-md js-lazy" data-background-image="./img/bg-section/bg-feature.png">
   <div class="section-img is-left is-top-center">
-    <img data-src="img/pngs/spice-05.png" alt="" class="js-lazy">
+    <img data-src="./img/pngs/spice-05.png" alt="" class="js-lazy">
   </div>
   <div class="section-img is-right is-bottom">
-      <img data-src="img/pngs/berry-02.png" alt="" class="js-lazy">
+      <img data-src="./img/pngs/berry-02.png" alt="" class="js-lazy">
     </div>
   <div class="container">
     <div class="section__title section-title">
@@ -83,7 +83,7 @@ features = {
         <!-- begin feature -->
         <div class="feature{% if i.mod %} {{ i.mod }}{% endif %}">
           <div class="feature__img">
-            <img data-src="img/features/{{ i.img }}" alt="" class="js-lazy">
+            <img data-src="./img/features/{{ i.img }}" alt="" class="js-lazy">
           </div>
 
           <div class="feature__content">
@@ -95,7 +95,7 @@ features = {
 
             {% if i.imgContent %}
               <div class="feature__img-content">
-                <img data-src="img/features/{{ i.imgContent }}" alt="" class="js-lazy">
+                <img data-src="./img/features/{{ i.imgContent }}" alt="" class="js-lazy">
               </div>
             {% endif %}
           </div>
