--- a/src/templates/partials/sections/_s-vine.html
+++ b/src/templates/partials/sections/_s-vine.html
@@ -1,20 +1,20 @@
 <!-- begin section -->
-<section class="section s-vine pt-xll pb-md js-lazy" data-background-image="img/bg-section/bg-vine.png">
+<section class="section s-vine pt-xll pb-md js-lazy" data-background-image="./img/bg-section/bg-vine.png">
   <div class="section__layer">
-    <img data-src="img/layer-01.jpg" alt="" class="js-lazy">
+    <img data-src="./img/layer-01.jpg" alt="" class="js-lazy">
   </div>
 
   <div class="section-img is-top-100 is-right">
-    <img data-src="img/pngs/jug.png" alt="" class="js-lazy">
+    <img data-src="./img/pngs/jug.png" alt="" class="js-lazy">
   </div>
   <div class="section-img is-top-100 is-left">
-      <img data-src="img/pngs/grapes.png" alt="" class="js-lazy">
+      <img data-src="./img/pngs/grapes.png" alt="" class="js-lazy">
   </div>
   <div class="section-img is-bottom-100 is-right">
-      <img data-src="img/pngs/spice-01.png" alt="" class="js-lazy">
+      <img data-src="./img/pngs/spice-01.png" alt="" class="js-lazy">
   </div>
   <div class="section-img is-bottom is-left">
-      <img data-src="img/pngs/leave.png" alt="" class="js-lazy">
+      <img data-src="./img/pngs/leave.png" alt="" class="js-lazy">
   </div>
 
   <div class="container">
