--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -6,6 +6,8 @@ body
   +reg
   color: $c-text
   +no-scroll
+  +sm
+    font-size: 14px
 
 input, textarea
   font-family: inherit
@@ -24,6 +26,20 @@ button
   display: inline-block
   fill: currentColor
   font-size: inherit
+
+.logo
+  display: inline-block
+  font-size: 0
+  +sm
+    width: 70px
+    height: 102px
+  +xs
+    width: 50px
+    height: 73px
+
+// .anim-img
+[data-loaded="true"]  
+  animation: fadeIn 1s
 
 .container
   max-width: 1440px
@@ -105,9 +121,7 @@ button
       box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17)
 
 .border
-  padding: 18px
-  // border-radius: 100px
-  // border: 1px solid $c-border
+  +css-lock(8, 18, 320, 1499, padding)
   position: relative
   color: $gray
   +image('border-sm.png')
@@ -125,12 +139,27 @@ button
   padding: 90px 40px
   background-color: $white
   border-radius: 120px
+  +xl
+    padding: 70px 30px
+    border-radius: 80px
+  +lg
+    padding: 50px 25px
+    border-radius: 55px
+  +md
+    padding: 30px 20px
+  +sm
+    padding: 20px 15px
+  +xs 
+    padding: 10px
   .icon
     fill: $accent
     position: absolute
     font-size: 50px
     bottom: -10px
-    right: 170px
+    right: 20%
+    +lg
+      font-size: 35px
+      bottom: -15px
 
 .quote
   position: relative
@@ -148,8 +177,20 @@ button
 .gallery-slide
   +cover
   border-radius: 15px
-  padding-top: 40%
+  padding-top: 20%
   display: block
+  +md
+    padding-top: 30%
+  +sm
+    padding-top: 40%
+  +xs
+    padding-top: 40%
+
+@keyframes fadeIn
+  0%
+    opacity: 0
+  100%
+    opacity: 1
   
 
 
