--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,7 +1,8 @@
 @import helpers/all
 // @import generated/sprite-png
-@import lib/bootstrap/bootstrap-grid
+// @import lib/bootstrap/bootstrap-grid
 @import lib/swiper
+@import lib/lightgallery
 @import fonts
 @import typo
 @import common
