--- a/src/sass/partials/_del-items.sass
+++ b/src/sass/partials/_del-items.sass
@@ -1,5 +1,5 @@
 .del-items
-  +flex(flex-start, normal, row, wrap)
+  +flex(center, normal, row, wrap)
   margin-left: -15px
   margin-right: -15px
 
@@ -9,10 +9,21 @@
   +flex(flex-start, center, column)
   padding-left: 40px
   padding-right: 40px
+  +lg
+    padding-left: 20px
+    padding-right: 20px
+  +xs
+    padding-left: 0
+    padding-right: 0
   &__wrap
     padding-left: 15px
     padding-right: 15px
     width: 33.33333%
+    margin-bottom: 15px
+    +md
+      width: 50%
+    +xs
+      width: 100%
   &__img
     margin-bottom: 40px
     +flex(center, center)
