--- a/src/sass/partials/_hero.sass
+++ b/src/sass/partials/_hero.sass
@@ -1,5 +1,12 @@
 .hero
   position: relative
+  .section-img
+    z-index: 1
+    +xl
+      img
+        max-width: 80%
+    +lg
+      display: none
   &__content
     max-width: 630px
   &__title, &__btns
@@ -14,9 +21,14 @@
       margin-bottom: 15px
   &__btns
     +flex
+    +md
+      display: block
   &__btn
     +notlast
       margin-right: 15px
+      +md
+        margin-right: 0
+        margin-bottom: 10px
   &__del
     color: $white
     .icon
@@ -30,4 +42,10 @@
     &__inner
       +flex(center, normal, column)
       padding-top: 10%
-      padding-bottom: 12%
+      padding-bottom: 20%
+      +r(1600)
+        padding-left: 45px
+        padding-right: 45px
+      +xs
+        padding-left: 0
+        padding-right: 0
