--- a/src/sass/partials/_section.sass
+++ b/src/sass/partials/_section.sass
@@ -3,8 +3,12 @@
   +cover
   background-size: auto
   background-position: 0 100%
+  +md
+    background-size: 60%
   &__title
     text-align: center
+    +lg
+      margin-bottom: 30px
   &__title-left
     max-width: 515px
     margin-right: percentage(1/12)
@@ -29,7 +33,8 @@
   
 .section-img
   position: absolute
-  z-index: 5
+  z-index: 0
+  pointer-events: none
   &.is-left
     left: 0
   &.is-bottom
@@ -38,6 +43,7 @@
     bottom: 10%
   &.is-right
     right: 0
+    text-align: right
   &.is-top-center
     top: 50%
     transform: translate(0, -50%)
@@ -53,15 +59,17 @@
   position: relative
   max-width: 900px
   margin-left: auto
-  margin-right: auto
-  
+  margin-right: auto  
   &__title
     +image('border-title.png')
     +cover
     background-size: 100%
-    padding: 50px
+    +css-lock(10, 50, 320, 1499, padding)
   &__text
     transform: translate(0, -50%)
+    +lg
+      transform: translate(0, 0)
+      margin-top: -1em
   
   &--light
     #{$this}__title
@@ -69,7 +77,9 @@
 
 .s-hits
   .section__layer
-    height: 135px
+    +css-lock(20, 135, 320, 1499, height)
+    +before
+      +css-lock(5, 45, 320, 1499, bottom)
   .section__title
     margin-bottom: 65px
     +xl
@@ -84,16 +94,70 @@
 .s-vine
   .section-title
     margin-bottom: 90px
+    +xl
+      margin-bottom: 70px
+    +lg
+      margin-bottom: 50px
+    +md
+      margin-bottom: 30px
+    +sm
+      margin-bottom: 15px
+  .section-img
+    &.is-top-100.is-right
+      +xl
+        img
+          max-width: 80%
+      +lg
+        display: none
+    &.is-top-100.is-left
+      z-index: 0
+      +xl
+        img
+          max-width: 80%
+      +lg
+        img
+          max-width: 70%
+
+.s-about
+
+.s-features
+  background-size: 25%
+  +md
+    background-size: 25%
+  .container
+    // position: relative
+    // z-index: 1
+  .section-img
+    &.is-left.is-top-center
+      z-index: 0
 
 .s-features-item
-  min-height: 80vh
+  min-height: 80vh  
 
 .s-delivery
   .section__title
     max-width: 565px
     margin-left: auto
-    margin: auto
+    margin-right: auto
+
 .s-gallery
+  padding-top: 15%
+  padding-bottom: 15%
+  .container
+    position: relative
+    z-index: 1
+  .section-img
+    &.is-top.is-right
+      +xl
+        img
+          max-width: 80%
+      +lg
+        img
+          max-width: 60%
+      +sm
+        z-index: 0
+        img
+          max-width: 50%
   .section__title
     max-width: 605px
     margin-left: auto
