--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -5,24 +5,24 @@
       <div class="header__inner">
         <div class="header__logo">
           <a href="/" class="logo">
-            <img data-src="img/logo.png" alt="" class="js-lazy">
+            <img data-src="./img/logo.png" alt="" class="js-lazy">
           </a>
         </div>
 
-        <div class="header__contact contact contact--first">
-          <div class="contact__title">Резерв столов:</div>
-          <a href="tel:+380987059474 " class="contact__phone">+380987059474</a>
+        <div class="header__contact header-contact header-contact--first">
+          <div class="header-contact__title">Резерв столов:</div>
+          <a href="tel:+380987059474 " class="header-contact__phone">+380987059474</a>
         </div>
 
-        <div class="header__contact contact">
-          <div class="contact__title">Заказать доставку:</div>
-          <a href="tel:+380737059474 " class="contact__phone">+380737059474</a>
+        <div class="header__contact header-contact">
+          <div class="header-contact__title">Заказать доставку:</div>
+          <a href="tel:+380737059474 " class="header-contact__phone">+380737059474</a>
         </div>
 
         <div class="header__top-right">
-          <div class="header__meta contact">
-            <div class="contact__title">Мы в соцсетях:</div>
-            <div class="contact__social">
+          <div class="header__meta header-contact">
+            <div class="header-contact__title">Мы в соцсетях:</div>
+            <div class="header-contact__social">
               {{ mixins.list(
                 name = 'social',
                 modifications = { wrap: '', item: '', link: '' },
@@ -35,9 +35,9 @@
             </div>
           </div>
 
-          <div class="header__meta contact">
-            <div class="contact__title">Радио “Квеври”</div>
-            <div class="contact__social-center">
+          <div class="header__meta header-contact">
+            <div class="header-contact__title">Радио “Квеври”</div>
+            <div class="header-contact__social-center">
               {{ mixins.list(
                 name = 'social',
                 modifications = { wrap: '', item: '', link: '' },
@@ -51,25 +51,61 @@
 
         <div class="header__cart">
           <!-- begin header-cart -->
-          <div class="header-cart">
-            <div class="header-cart__icon">
+          <a href="#" class="header-cart">
+            <span class="header-cart__icon">
               {{ mixins.icon('shopping-bag') }}
-            </div>
+              <sup>12</sup>
+            </span>
 
-            <div class="header-cart__content">
-              <div class="header-cart__title">12 товаров на 4500 грн</div>
-              <a href="#">Оформить заказ</a>
-            </div>
-          </div>
+            <span class="header-cart__content">
+              <span class="header-cart__title">12 товаров на 4500 грн</span>
+              <span class="header-cart__btn" href="#">Оформить заказ</span>
+            </span>
+          </a>
           <!-- end header-cart -->
+        </div>
+
+        <div class="header__burger">
+          <button href="#" class="burger js-burger"><span></span></button>
         </div>
       </div>
     </div>
   </div>
-  <div class="header__bottom">
+  <div class="header__bottom js-menu">
+    <button class="header__close js-menu-close"></button>
     <div class="container">
-      <div class="header__inner">
+      <div class="header__inner">        
         {% include "partials/_nav.html" %}
+
+        <div class="header__top-right-mob">
+          <div class="header__meta header-contact">
+            <div class="header-contact__title">Мы в соцсетях:</div>
+            <div class="header-contact__social">
+              {{ mixins.list(
+                name = 'social',
+                modifications = { wrap: '', item: '', link: '' },
+                list = [
+                  { link: mixins.icon('instagram') },
+                  { link: mixins.icon('google-plus') },
+                  { link: mixins.icon('facebook') }
+                ]
+              ) }}
+            </div>
+          </div>
+
+          <div class="header__meta header-contact">
+            <div class="header-contact__title">Радио “Квеври”</div>
+            <div class="header-contact__social-center">
+              {{ mixins.list(
+                name = 'social',
+                modifications = { wrap: '', item: '', link: '' },
+                list = [
+                  { link: mixins.icon('radio') }
+                ]
+              ) }}
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
