--- a/src/templates/partials/_hits-slider.html
+++ b/src/templates/partials/_hits-slider.html
@@ -139,7 +139,7 @@ slider = {
 %}
 
 <!-- begin slider -->
-<div class="slider__wrap slider--items__wrap js-tabs">
+<div class="slider__wrap slider--items__wrap slider--items-tabs__wrap js-tabs">
   <div class="slider__tabs-nav">
     <!-- begin slider-nav -->
     <div class="slider-nav">
@@ -165,9 +165,9 @@ slider = {
                 {% if j.label %}
                 <div class="item__label">акция</div>
                 {% endif %}
-                <!-- <div class="item__img js-lazy" data-background-image="img/slider/lulya3.png"> -->
+                <!-- <div class="item__img js-lazy" data-background-image="./img/slider/lulya3.png"> -->
                 <div class="item__img">
-                  <img data-src="img/slider/lulya3.png" alt="" class="js-lazy">
+                  <img data-src="./img/slider/lulya3.png" alt="" class="js-lazy">
                 </div>
 
                 <div class="item__title">{{ j.title }}</div>
