--- a/src/templates/partials/_vine-slider.html
+++ b/src/templates/partials/_vine-slider.html
@@ -32,9 +32,9 @@
         <!-- begin item -->
         <div class="item item--white">
           <div class="item__label item__label-age">18+</div>
-          <!-- <div class="item__img js-lazy" data-background-image="img/slider/vine.png"> -->
+          <!-- <div class="item__img js-lazy" data-background-image="./img/slider/vine.png"> -->
           <div class="item__img">
-            <img data-src="img/slider/vine.png" alt="" class="js-lazy">
+            <img data-src="./img/slider/vine.png" alt="" class="js-lazy">
           </div>
 
           <div class="item__title">{{ i.title }}</div>
