--- a/src/templates/partials/sections/_s-about.html
+++ b/src/templates/partials/sections/_s-about.html
@@ -1,5 +1,5 @@
 <!-- begin section -->
-<section class="section pb-md overflow-hidden">
+<section class="section s-about pb-md overflow-hidden">
   <div class="container">
     <div class="section__title section-title">
       <div class="section-title__title">
@@ -19,7 +19,7 @@
       <!-- begin about-block -->
       <div class="about-block">
           <div class="about-block__img">
-            <img data-src="img/about/1.jpg" alt="" class="js-lazy">
+            <img data-src="./img/about/1.jpg" alt="" class="js-lazy">
           </div>
 
           <div class="about-block__text">
@@ -34,7 +34,7 @@
           </div>
 
           <div class="about-block__img-right">
-            <img data-src="img/pngs/jug-02.png" alt="" class="js-lazy">
+            <img data-src="./img/pngs/jug-02.png" alt="" class="js-lazy">
           </div>
       </div>
       <!-- end about-block -->
@@ -54,18 +54,18 @@
                 вино снимают с осадка и начинают пить. </p>
           </div>
 
-          <!-- <div class="about-block__img js-lazy" data-background-image="img/about/2.jpg"></div> -->
+          <!-- <div class="about-block__img js-lazy" data-background-image="./img/about/2.jpg"></div> -->
 
           <div class="about-block__img">
-              <img data-src="img/about/2.jpg" alt="" class="js-lazy">
+              <img data-src="./img/about/2.jpg" alt="" class="js-lazy">
             </div>
       </div>
       <!-- end about-block -->
 
       <!-- begin about-block -->
-      <div class="about-block js-lazy" data-background-image="img/bg-section/bg-about.png">
+      <div class="about-block js-lazy" data-background-image="./img/bg-section/bg-about.png">
         <div class="about-block__img">
-          <img data-src="img/pngs/bottle.png" alt="" class="js-lazy">
+          <img data-src="./img/pngs/bottle.png" alt="" class="js-lazy">
         </div>
 
         <div class="about-block__quote-fu quote-fu">
@@ -90,7 +90,7 @@
         </div>
 
         <div class="about-block__img">
-          <img data-src="img/about/3.jpg" alt="" class="js-lazy">
+          <img data-src="./img/about/3.jpg" alt="" class="js-lazy">
         </div>
       </div>
       <!-- end about-block -->
