--- a/src/templates/partials/sections/_s-delivery.html
+++ b/src/templates/partials/sections/_s-delivery.html
@@ -28,13 +28,13 @@ items = [
 %}
 
 <!-- begin section -->
-<section class="section s-delivery bg-cover bg-center-center pt-xl pb-lgl js-lazy" data-background-image="img/bg-section/bg-delivery.jpg">
+<section class="section s-delivery bg-cover bg-center-center pt-xl pb-lgl js-lazy" data-background-image="./img/bg-section/bg-delivery.jpg">
   <div class="section__layer">
-    <img data-src="img/bg-layer-02.png" alt="" class="js-lazy">
+    <img data-src="./img/bg-layer-02.png" alt="" class="js-lazy">
   </div>
 
   <div class="section-img is-right is-top-200">
-    <img data-src="img/pngs/spice-02.png" alt="" class="js-lazy">
+    <img data-src="./img/pngs/spice-02.png" alt="" class="js-lazy">
   </div>
   <div class="container">
     <div class="section__title section-title section-title--light">
@@ -51,7 +51,7 @@ items = [
         <div class="del-item__wrap">
           <div class="del-item">
             <div class="del-item__img">
-              <img data-src="img/delivery/{{ i.img }}" alt="" class="js-lazy">
+              <img data-src="./img/delivery/{{ i.img }}" alt="" class="js-lazy">
             </div>
 
             <div class="del-item__title">{{ i.title }}</div>
