--- a/src/templates/partials/sections/_s-hits.html
+++ b/src/templates/partials/sections/_s-hits.html
@@ -1,7 +1,7 @@
 <!-- begin section -->
 <section class="section section--black s-hits pt-xll pb-mdl">
   <div class="section__layer">
-    <img data-src="img/bg-layer.png" alt="" class="js-lazy">
+    <img data-src="./img/bg-layer.png" alt="" class="js-lazy">
   </div>
   <div class="container">
     <div class="section__title">
@@ -14,10 +14,10 @@
   </div>
 
   <div class="section-img is-right is-top-200">
-    <img src="img/pngs/pepper.png" alt="" class="js-lazy">
+    <img src="./img/pngs/pepper.png" alt="" class="js-lazy">
   </div>
   <div class="section-img is-left is-bottom">
-    <img src="img/pngs/spice-04.png" alt="" class="js-lazy">
+    <img src="./img/pngs/spice-04.png" alt="" class="js-lazy">
   </div>
 </section>
 <!-- end section -->
